[package]
name = "rust_sandbox"
version = "0.1.0"
authors = ["nicolas JOULIN <joulin.nicolas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.1", features = ["yaml"]}
image = "0.23.7"
palette = "0.5.0"
